--- a/1st_assignment_embeded_systems.ipynb
+++ b/1st_assignment_embeded_systems.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYkGN8H9sRxhpB6fcy2qWF",
+      "authorship_tag": "ABX9TyMIl/hFk2JmqQckAXSryLqq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1779,7 +1779,7 @@
         "# Conclusão da segunda arquitetura\n",
         "-> 2 Neurônios na hidden layer.\n",
         "\n",
-        "Em contrapartida, em uma arquitetura com dois neurônios, a estabilização do loss se dá por volta das 25 épocas. Mantendo o parâmetro de previsão 10, obtivemos:\n",
+        "Em contrapartida, em uma arquitetura com dois neurônios, a estabilização do loss se dá por volta das 100 épocas. Mantendo o parâmetro de previsão 10, obtivemos:\n",
         "\n",
         "* A2M1:\n",
         "  * Pesos:\n",
@@ -1810,7 +1810,8 @@
         "  Podemos observar que os pesos não seguiram um padrão, como na primeira arquitetura, um possível causador seja o Learning rate.\n",
         "\n",
         "  # Conclusão final\n",
-        "  "
+        "\n",
+        "  Podemos afirmar, que o treinamento é otimizado na segunda arquitetura, devido ao fato de com menos épocas, alcançamos o mesmo loss. Entretanto, é possível observar graficamente que a segunda arquitetura não tem um tangenceamento bem definido, tendo pesos diferentes, podendo afetar a confiabilidade do algoritmo."
       ],
       "metadata": {
         "id": "P3Gv7SBpAq2Z"
